# p-validator-history

./: .gitignore  Cargo.toml  Quasar.toml  README.md  go.mod  go.sum  readme.md
cmd/web/: coverage.out  main.go  middleware.go  middleware_test.go  routes.go  routes_test.go  send-mail.go
html-source/: about.html  contact.html  generals.html  index.html  majours.html  make-reservation.html  reservation.html
internal/config/: config.go
internal/driver/: driver.go
internal/forms/: coverage.out  errors.go  forms.go  forms_test.go
internal/handlers/: handlers.go  handlers_test.go  setup_test.go
internal/helpers/: helpers.go
internal/models/: models.go  templatedata.go
migrations/: 20210831133801_create_create_fkfor_reservation_tables.up.fizz  20210831135546_create_create_fkfor_room_restrictions.up.fizz  20210831142042_create_add_fkand_indicies_to_reservation_tables.up.fizz  20210903023750_create_seed_rooms_tables.postgres.up.sql  20210903023929_create_seed_restrictions_tables.postgres.up.sql
pkg/render/: render.go
program/: Cargo.toml
src/: errors.rs  lib.rs  tests.rs
templates/: about.page.html  admin-all-reservations.page.html  admin-dashboard.page.html  admin-new-reservation.page.html  admin-reservation-show.page.html  admin-reservations-calendar.page.html  admin-reservations-calendar.page.html.html  admin.layout.html  base.layout.html  choose-room.page.html  generals.page.html  home.page.html  index.html  login.page.html  majors.page.html  make-reservation.page.html  reservation-summary.page.html  reservation.page.html  search-availability.page.html
(+28 files in other folders)
